--- a/cv.tex
+++ b/cv.tex
@@ -64,15 +64,17 @@
 \begin{rightcolumn}
 \begin{cvsection}{EXPERIENCE}
   \cvinfobox{Yandex Search}{ 06.2020-present | Teamlead}
-  {My team is working on a company-wide microservices framework. 1000 microservices, 1 billion requests per second processed by our component.\\
-  C++ for data plain, Python for control plain, and tests/infrastructure.\\
-  Main goals are 99.999\% availability achieved, Http transport replaced with faster
-  implementation, distributed tracing over our framework speedup from minute to 1-3sec per request.}
+  {My team is working on a company-wide microservices framework, which serves
+  1000 microservices, 10 millions requests per second.\\
+  We use C++ for data plane, Python for control plane, and tests/infrastructure.\\
+  Main achievements are 99.999\% availability, HTTP transport replacement
+  with faster implementation, speedup of distributed tracing over our
+  framework from minute to 1-3sec per request.}
   \cvinfobox{Yandex Search}{ 11.2018-06.2020 | Software Engineer}
   {Worked on Search Infrastructure team. C++, Python, grpc, networking.
-  Design and implement SDCH support at Search Engine Result Page.
-  C++ backend with custom SDCH implementation.\\
-  Improve search query preprocessing pipeline. Reimplement part of business logic with C++, fix some architectural problems, a bit speed up search}
+  Designed and implemented SDCH support for Search Engine Result Page.
+  Main part was C++ backend with custom SDCH implementation.\\
+  Improved search query preprocessing pipeline. Reimplemented part of business logic with C++, fixed some architectural problems, got speedup.}
   \cvinfobox{Google}{07.2018-10.2018 | Software Engineering Intern}
   {Worked on Shopping Data Quality team. Primary C++, MapReduce, Stubby.
    Designed and implemented an infrastructure for intellectual scheduling of merchants review. This infrastructure helped to improve existing scheduling logic
