--- a/cv.tex
+++ b/cv.tex
@@ -67,10 +67,9 @@
   \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer}
   {Working about packet sampling in virtual network data plane. Main part is instrumentation of virtual
   networking components with packet sampling. \\
-  Main technologies are internal DPDK-like framework, C++. 
-  And regular grpc and C++ backend for packet samples processing. \\
-  Main achievements are instrumnetaion a new virtual networking plane component from scratch,
-  2-10\% fast path packet processing speedup by moving expencive syscalls from fastpath, introduce framework for 
+  Main technologies are internal DPDK-like framework, C++ in network data plane plus grpc and C++ for packet samples processing. \\
+  Main achievements are instrumnetaion of a new virtual networking data plane component,
+  2-10\% fast path packet processing speedup by moving expencive syscalls from fast path, introduce framework for 
   simplification of packet drops debugging.}
   
   \cvinfobox{Yandex Search}{ 06.2020-06.2022 | Teamlead}
