networking instead of protocols

--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 \end{cvsection}
 
 \begin{cvsection}{TECHNOLOGIES}
-  Linux \listbullet TCP IP  \listbullet  HTTP \listbullet  HTTP2 \\
+  Linux \listbullet Networking \\
   grpc \listbullet protobuf \listbullet Docker \\
   git \\
 \end{cvsection}
