--- a/cv.tex
+++ b/cv.tex
@@ -61,7 +61,7 @@
   \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer}
   {Working on packet sampling in virtual network data plane. Main part is instrumentation of virtual
   networking components with packet sampling. \\
-  Technologies: internal DPDK-like framework, C++ in network data plane plus GRPC and C++ for packet samples processing. \\
+  Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing. \\
   Main achievements are instrumentation of a new data plane component with packet sampling,
   2-10\% fast path packet processing speedup by moving expensive syscalls out of fast path, and framework for 
   simplification of packet drops debugging.}
