--- a/cv.tex
+++ b/cv.tex
@@ -36,7 +36,7 @@
 
 \begin{cvsection}{FUN FACTS}
   \listbullet \href{https://lore.kernel.org/lkml/CACgs1VAo5AD-6sw2QCNKhRtoOy99XNP24dAWUrdryJKhCxwsMA@mail.gmail.com/}{Fixed (tiny) crash in Linux kernel} \\
-  \listbullet \href{https://yatalks.yandex.ru/en/speakers/svyatoslav-feldsherov}{Gave a talk on YaTalks 2023} \\
+  \listbullet \href{https://yatalks.yandex.ru/en/speakers/svyatoslav-feldsherov}{Speaker at YaTalks 2023} \\
 \end{cvsection}
 
 \begin{cvsection}{EDUCATION}
