--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
   framework from minute to 1-3sec per request.}
 
   \cvinfobox{Yandex Search}{ 11.2018-06.2020 | Software Engineer}
-  {Worked on Search Infrastructure team. C++, Python, grpc, networking.
+  {Worked on Search Infrastructure team. C++, Python, gRPC, networking.
   Designed and implemented SDCH support for Search Engine Result Page.
   Main part was C++ backend with custom SDCH implementation.\\
   Improved search query preprocessing pipeline. Reimplemented part of business logic with C++, 
