--- a/cv.tex
+++ b/cv.tex
@@ -59,20 +59,19 @@
 \begin{rightcolumn}
 \begin{cvsection}{EXPERIENCE}
   \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer}
-  {Working on packet sampling in virtual network data plane. Main part is instrumentation of virtual
-  networking components with packet sampling. \\
-  Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing. \\
-  Main achievements are instrumentation of a new data plane component with packet sampling,
-  2-10\% fast path packet processing speedup by moving expensive syscalls out of fast path, and framework for 
-  simplification of packet drops debugging.}
+  {Working on Google Cloud virtual network telemetry. \\
+  Main achievements: provided important telemetry for C3 family of VMs, supported Inter-VPC NAT telemetry, 2-10\% fast path packet processing speedup. \\
+  Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing.}
   
   \cvinfobox{Yandex Search}{ 06.2020-06.2022 | Software Engineer / Team Lead}
-  {Team I led was working on a company-wide microservices framework, which serves
-  1000 microservices, 10 million requests per second.\\
-  We used C++ for data plane, Python for control plane, and tests/infrastructure.\\
-  Main achievements are 99.999\% availability, HTTP transport replacement
+  {I was working on a company-wide microservices framework, which serves
+  1000+ microservices, 10+ million requests per second.\\
+  Main achievements company wide adoption of framework, 
+  numerious product launches unblocked by framework features. \\
+  Technical achievements: 99.999\% availability, HTTP transport replacement
   with faster implementation, speedup of distributed tracing over our
-  framework from minute to 1-3sec per request.}
+  framework from minute to 1-3sec per request. \\
+  Team was using C++ for data plane, Python for control plane, and tests/infrastructure.}
 
   \cvinfobox{Yandex Search}{ 11.2018-06.2020 | Software Engineer}
   {Worked on Search Infrastructure team. C++, Python, gRPC, networking.
