add link and github

--- a/cv.tex
+++ b/cv.tex
@@ -5,7 +5,7 @@
 \newcommand{\listbullet}{$\; \cdot \;$}
 
 \author{Svyatoslav Feldsherov}
-\contacts{svyat@feldsherov.name | +972-53-451-4602 }
+\contacts{svyat@feldsherov.name | +972-53-451-4602 | \href{https://linkedin.com/in/svyat}{linkedin.com/in/svyat} | \href{https://github.com/feldsherov}{github.com/feldsherov}}
 \begin{document}
 
 \maketitle
