--- a/cv.tex
+++ b/cv.tex
@@ -78,7 +78,7 @@
   Designed and implemented SDCH support for Search Engine Result Page.
   Main part was C++ backend with custom SDCH implementation.\\
   Improved search query preprocessing pipeline. Reimplemented part of business logic with C++, 
-  fixed some architectural problems, speedup on 5-10ms on the affected slice of traffic.}
+  fixed some architectural problems, speedup of 5-10ms on the affected slice of traffic.}
   
   \cvinfobox{Google}{07.2018-10.2018 | Software Engineering Intern}
   {Worked on Shopping Data Quality team. Primary C++, MapReduce, Stubby.
