--- a/cv.tex
+++ b/cv.tex
@@ -35,6 +35,8 @@
 \end{cvsection}
 
 \begin{cvsection}{FUN FACTS}
+  \listbullet Speaker at C++ On Sea 2024 \\
+  \listbullet Speaker at C++ Russia 2024 \\
   \listbullet \href{https://lore.kernel.org/lkml/CACgs1VAo5AD-6sw2QCNKhRtoOy99XNP24dAWUrdryJKhCxwsMA@mail.gmail.com/}{Fixed (tiny) crash in Linux kernel} \\
   \listbullet \href{https://yatalks.yandex.ru/en/speakers/svyatoslav-feldsherov}{Speaker at YaTalks 2023} \\
 \end{cvsection}
@@ -58,9 +60,9 @@
 
 \begin{rightcolumn}
 \begin{cvsection}{EXPERIENCE}
-  \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer}
+  \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer Tech Lead}
   {Working on Google Cloud virtual network telemetry. \\
-  Main achievements: provided important telemetry for C3 family of VMs, supported Inter-VPC NAT telemetry, 2-10\% fast path packet processing speedup. \\
+  Main achievements: provided telemetry features for C3 family of VMs, supported Inter-VPC NAT telemetry, 2-10\% fast path packet processing speedup. \\
   Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing.}
   
   \cvinfobox{Yandex Search}{ 10.2019-06.2022 | Software Engineer / Team Lead}
@@ -73,7 +75,7 @@
   framework from minute to 1-3sec per request. \\
   Team was using C++ for data plane, Python for control plane, and tests/infrastructure.}
 
-  \cvinfobox{Yandex Search}{ 11.2018-10.2019 | Software Engineer}
+  \cvinfobox{Yandex Search}{ 10.2018-10.2019 | Software Engineer}
   {Worked on Search Infrastructure team. C++, Python, gRPC, networking.
   Designed and implemented SDCH support for Search Engine Result Page.
   Main part was C++ backend with custom SDCH implementation.\\
