--- a/cv.tex
+++ b/cv.tex
@@ -60,12 +60,12 @@
 
 \begin{rightcolumn}
 \begin{cvsection}{EXPERIENCE}
-  \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Software Engineer Tech Lead}
+  \cvinfobox{Google Cloud, Virtual Network Dataplane Telemetry}{ 08.2022-present | Senior Software Engineer / Tech Lead}
   {Working on Google Cloud virtual network telemetry. \\
   Main achievements: provided telemetry features for C3 family of VMs, supported Inter-VPC NAT telemetry, 2-10\% fast path packet processing speedup. \\
   Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing.}
   
-  \cvinfobox{Yandex Search}{ 10.2019-06.2022 | Software Engineer / Team Lead}
+  \cvinfobox{Yandex Search}{ 10.2019-08.2022 | Staff Software Engineer / Teach Lead Manager}
   {I was working on a company-wide microservices framework, which serves
   1000+ microservices, 10+ million requests per second.\\
   Main achievements company wide adoption of framework, 
@@ -75,19 +75,19 @@
   framework from minute to 1-3sec per request. \\
   Team was using C++ for data plane, Python for control plane, and tests/infrastructure.}
 
-  \cvinfobox{Yandex Search}{ 10.2018-10.2019 | Software Engineer}
+  \cvinfobox{Yandex Search}{ 09.2018-10.2019 | Software Engineer}
   {Worked on Search Infrastructure team. C++, Python, gRPC, networking.
   Designed and implemented SDCH support for Search Engine Result Page.
   Main part was C++ backend with custom SDCH implementation.\\
   Improved search query preprocessing pipeline. Reimplemented part of business logic with C++, 
   fixed some architectural problems, speedup of 5-10ms on the affected slice of traffic.}
   
-  \cvinfobox{Google}{07.2018-10.2018 | Software Engineering Intern}
+  \cvinfobox{Google}{07.2018-09.2018 | Software Engineering Intern}
   {Worked on Shopping Data Quality team. Primary C++, MapReduce, Stubby.
    Designed and implemented an infrastructure for intellectual scheduling of merchants review. This infrastructure helped to improve existing scheduling logic
    and allowed the team to migrate from several legacy services.}
   
-   \cvinfobox{Yandex Ads}{03.2017-06.2018 | Junior Backend Developer}
+   \cvinfobox{Yandex Ads}{03.2017-07.2018 | Junior Backend Developer}
   {Designed and implemented distributed log collection and event
    plotting system using internal technologies, including YTsaurus — Bigtable-like
    storage with MapReduce framework on top of it. \\
