--- a/cv.tex
+++ b/cv.tex
@@ -65,7 +65,7 @@
   Main achievements: provided telemetry features for C3 family of VMs, supported Inter-VPC NAT telemetry, 2-10\% fast path packet processing speedup. \\
   Technologies: internal DPDK-like framework, C++ in network data plane plus gRPC and C++ for packet samples processing.}
   
-  \cvinfobox{Yandex Search}{ 10.2019-08.2022 | Staff Software Engineer / Teach Lead Manager}
+  \cvinfobox{Yandex Search}{ 10.2019-08.2022 | Principal Software Engineer / Teach Lead Manager}
   {I was working on a company-wide microservices framework, which serves
   1000+ microservices, 10+ million requests per second.\\
   Main achievements company wide adoption of framework, 
